# Smart-Aquisition-9June

./: README.md  app.py  pyproject.toml
attached_assets/: Pasted--No-file-chosen-Landing-Page-SMART-Sourcing-SMART-Perfo-1749119492224.txt  Pasted-You-are-an-expert-Python-developer-Your-mission-is-to-construct-a-sophisticated-multi-page-Streaml-1749065007265.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-pin-1--1749130990159_1749130990160.txt
modules/: __init__.py  amp8_regulatory.py  landing.py  smart_markets.py  smart_performance.py  smart_performance_redesigned.py  smart_sourcing.py  smart_sourcing_redesigned.py
utils/: data_generator.py  market_scanner.py  thames_water_research.py  web_scraper.py
