[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "djaodjin-pages>=0.8.3",
    "google-api-python-client>=2.171.0",
    "networkx>=3.5",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
